# Ai-engineering

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
Apps/: app.py
Apps/api/: Dockerfile  README.md  pyproject.toml
Apps/api/src/: main.py
Apps/api/src/agent/: reterivalgeneration.py
Apps/api/src/api/: endpoints.py  middleware.py
Apps/chatbot_ui/: Dockerfile  README.md  pyproject.toml
Apps/chatbot_ui/src/chatbot_ui/: app.py
Apps/chatbot_ui/src/chatbot_ui/core/: __init__.py  config.py
apps/api/: pyproject.toml
apps/api/src/api/: __init__.py  app.py
apps/api/src/api/core/: config.py
notebook/week1/: 01-explore-amzon-dataset.ipynb  02-Ragamazon.ipynb  03-ragpipeline.ipynb  05-RagEvals.ipynb  evaluation-dataset.ipynb
notebooks/: llapi.ipynb
qdrant_storage/: raft_state.json
src/: app.py
src/core/: config.py
