[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anurag Yadav", email = "jaysinghanurag321@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.48.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
